@@ -2,7 +2,9 @@ module redwine.sensor {
     // WebBeans
     requires cdi.api;
     requires javax.inject;
+
     requires java.annotation;
+    requires jdk.unsupported;
 
     // JSON
     requires org.glassfish.java.json;
@@ -10,7 +12,7 @@ module redwine.sensor {
     // Websocket Client
     requires tyrus.client;
     requires javax.websocket.api;
-    requires jdk.incubator.httpclient;
+    requires java.net.http;
 
     // Logging
     requires org.apache.logging.log4j;
@@ -18,6 +20,7 @@ module redwine.sensor {
     // AWS
     requires aws.core;
     requires secretsmanager;
+    requires sns;
     requires regions;
 
     exports com.beuwa.redwine.sensor.app to tyrus.core;
@@ -34,4 +37,7 @@ module redwine.sensor {
     opens com.beuwa.redwine.strategy.sma.statistics;
     opens com.beuwa.redwine.strategy.sma.observers;
     opens com.beuwa.redwine.strategy.sma.dao;
+    opens com.beuwa.redwine.strategy.sma.utils;
+    opens com.beuwa.redwine.strategy.sma.facade;
+    opens com.beuwa.redwine.core.config.beans;
 }
